2006-03-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, win/tcl.m4: []-quote AC_DEFUN functions.

2006-03-26  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* tests/text.test: Fix for elaborations of [Bug 1414171] for 
	'$text dump -command <script>' where script deletes large
	portions of the text widget, or even destroys the widget.

2006-03-28  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.xcode/default.pbxuser:     add '-singleproc 1' cli arg to
	* macosx/Wish.xcodeproj/default.pbxuser: tcltest to ease test debugging.
	
	* macosx/Wish.xcode/project.pbxproj:     removed $prefix/share from
	* macosx/Wish.xcodeproj/project.pbxproj: TCL_PACKAGE_PATH as per change
	to tcl/unix/configure.in of 2006-03-13.

	* macosx/tkMacOSXDraw.c:   sync whitespace & minor changes
	* macosx/tkMacOSXEvent.h:  with core-8-4-branch.
	* macosx/tkMacOSXFont.h:
	* macosx/tkMacOSXMenu.c:
	* macosx/tkMacOSXNotify.c:

2006-03-27  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5a4 TAGGED FOR RELEASE ***

	* changes:	Updates for next RC

2006-03-27  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* generic/tkTextDisp.c (MeasureChars): Fix calculations of start and
	end of string.  [Bugs 1325998, 1456157]

2006-03-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgGIF.c (FileReadGIF): Stop crashes when the first GIF
	frame does not define the overall size of the image. [Bug 1458234]

2006-03-26  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* generic/tkText.h:
	* generic/tkTextBTree.c:
	* tests/text.test: Fix for [Bug 1414171] for '$text dump -command
	<script>' where 'script' actually modifies the widget during the
	process.

2006-03-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c (TkMacOSXSetUpCGContext): 
	* macosx/tkMacOSXFont.c (TkMacOSXQuarzStartDraw, TkMacOSXQuarzEndDraw):
	performance improvements, sync similar code, formatting & whitespace.
