@@ -1,3 +1,9 @@
+2006-03-29  Don Porter  <dgp@users.sourceforge.net>
+
+	* unix/tkUnixDefault.h:	Changed "Black" to "#000000" and "White" to
+	"#ffffff" to work around the (broken?) X servers that do not accept
+	those color names.  [Bug 917433]
+
 2006-03-28  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/tcl.m4, win/tcl.m4: []-quote AC_DEFUN functions.
